# meloturtle_framework

./: .gitignore  LICENSE  README.md
backend/: .env  Dockerfile  README.md  pyproject.toml
backend/backend/: __init__.py  __main__.py  logging.py  settings.py
backend/backend/db/: base.py  utils.py
backend/backend/db/dao/: playlist_dao.py  user_dao.py
backend/backend/db/models/: __init__.py  playlist.py  user.py
backend/backend/services/recommendations_manager/: __init__.py  recommender_manager.py
backend/backend/services/recommendations_manager/recommendation_models/: __init__.py  recommender_model.py
backend/backend/services/recommendations_manager/recommendation_models/chatgpt/: chatgpt_adapter.py  prompts
backend/backend/services/recommendations_manager/recommendation_models/moodika/: __init__.py  moodika_a_adapter.py
backend/backend/services/recommendations_manager/recommendation_models/moodika/model_a/: config.py  moodika.py
backend/backend/services/spotify_manager/: __init__.py  spotify_manager.py
backend/backend/web/: __init__.py  application.py  lifetime.py
backend/backend/web/api/: __init__.py  router.py
backend/backend/web/api/auth/: __init__.py  auth_utils.py  views.py
backend/backend/web/api/docs/: __init__.py
backend/backend/web/api/genres/: __init__.py  views.py
backend/backend/web/api/models/: __init__.py  schema.py  views.py
backend/backend/web/api/monitoring/: __init__.py
backend/backend/web/api/playlists/: __init__.py  schema.py  views.py
backend/backend/web/api/user/: __init__.py  schema.py  views.py
deploy/: docker-compose.yml
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Footer.jsx  GenreSelection.jsx  LoadingSpinner.jsx  ModelCard.jsx  ModelDropdown.jsx  ModelList.jsx  Navbar.jsx  NumSongsInput.jsx  Playlist.jsx  PlaylistForm.jsx  PopularitySlider.jsx  PromptInput.jsx  UserDropdown.jsx
frontend/src/pages/: About.jsx  ErrorPage.jsx  GeneratedPlaylist.jsx  Generator.jsx  Home.jsx  Layout.jsx  Login.jsx  NoPage.jsx  RedirectHandler.jsx  SavedPlaylists.jsx
frontend/src/provider/: AuthProvider.jsx  ToastProvider.jsx
frontend/src/routes/: ProtectedRoute.jsx  index.jsx
frontend/src/service/: GenresService.js  ModelsService.js  PlaylistService.js
frontend/src/store/: store.js
(+14 files in other folders)
